--- a/CSS/DropDown/style.css
+++ b/CSS/DropDown/style.css
@@ -1,5 +1,5 @@
 ul{
-    background-color: black;
+    background-image: linear-gradient(rgb(30, 149, 189), purple);
     list-style-type: none;
     padding: 10px;
     margin: 0;
