--- a/CSS/aula01/style.css
+++ b/CSS/aula01/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dhurjati&family=Saira+Semi+Condensed:wght@100&display=swap');
 
 header{
+    background-image: linear-gradient(#1e95bd, #971397);
     font-size: 50px;
     font-family: 'Dhurjati', sans-serif;
     padding: 1px 1px 1px 1px; /*preenchimento na parte interna do elemento */
@@ -9,7 +10,8 @@ header{
     height: 80px;
     border: 1px solid #C87BF5;
     border-radius: 20px;
-    color: #87A1F5;
+    color: #050a1a;
+    box-shadow: 2px 2px 5px #050a1a;
 }
 
 div{
@@ -22,6 +24,7 @@ div{
 
 h1{
     font-family: 'Dhurjati', sans-serif;  /*Fontes podem ser adquiridas no Google fontes */
+    text-shadow: 2px 2px 5px #050a1a;
 }
 
 p{
