--- a/freeCodeCamp/JavaScript/RPG/styles.css
+++ b/freeCodeCamp/JavaScript/RPG/styles.css
@@ -15,6 +15,22 @@ body {
     color: #ffffff;
     margin: 30px auto 0px;
     padding: 10px;
+    z-index: 1;
+  }
+
+  #background img{
+    z-index: -1;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    max-width: 80%;
+    max-height: 500px;
+    width: 100%;
+    top: 1%;
+    left: 10%;
+    right: 10%;
+    opacity: 70%;
+    border: 0;
   }
   
   #controls,
